# 3rdTermProject

./: .clang-format  .gitignore  .qmake.stash  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.Debug  Makefile.Release  README.md  TankBattle.pro  base.cpp  base.h  build.bat  build_and_run.bat  bullet.cpp  bullet.h  constants.h  enemytank.cpp  enemytank.h  gamemanager.cpp  gamemanager.h  gamescene.cpp  gamescene.h  main.cpp  mainwindow.cpp  mainwindow.h  mapdata.h  playertank.cpp  playertank.h  run.bat  setup-env.bat  startscene.cpp  startscene.h  tank.cpp  tank.h  vcpkg.json  wall.cpp  wall.h
.claude/: settings.local.json
data/: config.json  custom_resources.json  highscores.db
data/levels/: level_01.json  level_02.json  level_03.json  level_04.json  level_05.json  level_multi.json
debug/: moc_gamemanager.cpp  moc_gamescene.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_startscene.cpp  object_script.TankBattle.Debug
deploy/: run.bat
qt-sdk/include/qt6/QtCore/: qconfig.h  qfileinfo.h  qtcore-config.h
qt-sdk/include/qt6/QtCore/6.11.1/QtCore/private/: qconfig_p.h  qobject_p.h  qtcore-config_p.h
qt-sdk/include/qt6/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
qt-sdk/include/qt6/QtFbSupport/: qtfbsupportversion.h
qt-sdk/include/qt6/QtGui/: QVulkanFunctions  QVulkanInstance  QVulkanWindow  qtgui-config.h
qt-sdk/include/qt6/QtGui/6.11.1/QtGui/private/: qrhid3d12_p.h  qrhivulkan_p.h  qtgui-config_p.h  qwindowsfontenginedirectwrite_p.h
qt-sdk/include/qt6/QtNetwork/: QDtlsClientVerifier  QtNetwork  qabstractsocket.h  qhostaddress.h  qhostinfo.h  qnetworkdatagram.h  qnetworkinterface.h  qnetworkrequest.h  qssl.h  qtnetwork-config.h  qtnetworkversion.h
qt-sdk/include/qt6/QtNetwork/6.11.1/QtNetwork/private/: http2frames_p.h  qsslserver_p.h
qt-sdk/include/qt6/QtPrintSupport/: qtprintsupportversion.h
qt-sdk/include/qt6/QtSql/: qtsqlversion.h
qt-sdk/include/qt6/QtTest/: qtestaccessible.h  qtestkeyboard.h  qttestversion.h
qt-sdk/include/qt6/QtTest/6.11.1/QtTest/private/: qpropertytesthelper_p.h
qt-sdk/include/qt6/QtXml/: qtxmlversion.h
qt-sdk/lib/: Qt6Concurrent.prl  Qt6Core.prl  Qt6DBus.prl  Qt6DeviceDiscoverySupport.prl  Qt6EntryPoint.prl  Qt6FbSupport.prl  Qt6Gui.prl  Qt6Network.prl  Qt6OpenGL.prl  Qt6OpenGLWidgets.prl  Qt6PrintSupport.prl  Qt6Sql.prl  Qt6Test.prl  Qt6Widgets.prl  Qt6Xml.prl
qt-sdk/share/qt6/metatypes/: qt6core_metatypes.json  qt6widgets_metatypes.json
qt-sdk/share/qt6/mkspecs/: qconfig.pri  qmodule.pri
qt-sdk/share/qt6/mkspecs/common/: g++-win32.conf  g++-win32.conf.orig
qt-sdk/share/qt6/mkspecs/features/: create_cmake.prf  default_post.prf  qt.prf
qt-sdk/share/qt6/mkspecs/features/android/: android.prf
qt-sdk/share/qt6/mkspecs/modules/: qt_lib_concurrent.pri  qt_lib_core.pri  qt_lib_core_private.pri  qt_lib_dbus.pri  qt_lib_dbus_private.pri  qt_lib_devicediscovery_support_private.pri  qt_lib_entrypoint_private.pri  qt_lib_fb_support_private.pri  qt_lib_gui.pri  qt_lib_gui_private.pri  qt_lib_network.pri  qt_lib_network_private.pri  qt_lib_opengl.pri  qt_lib_opengl_private.pri  qt_lib_openglwidgets.pri  qt_lib_printsupport.pri  qt_lib_printsupport_private.pri  qt_lib_sql.pri  qt_lib_sql_private.pri  qt_lib_testinternals_private.pri  qt_lib_testlib.pri  qt_lib_testlib_private.pri  qt_lib_widgets.pri  qt_lib_widgets_private.pri  qt_lib_xml.pri  qt_lib_xml_private.pri
qt-sdk/share/qt6/modules/: Concurrent.json  Core.json  DBus.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  FbSupportPrivate.json  Gui.json  Network.json  OpenGL.json  OpenGLWidgets.json  PrintSupport.json  Sql.json  Test.json  TestInternalsPrivate.json  Widgets.json  Xml.json
release/: moc_mainwindow.cpp  moc_predefs.h  object_script.TankBattle.Release
src/: main.cpp
src/ai/: aggressive_ai.cpp  aggressive_ai.h  ai_controller.cpp  ai_controller.h  decision_tree.cpp  decision_tree.h  patrol_ai.cpp  patrol_ai.h
src/app/: game_application.cpp  game_application.h  main_menu.cpp  main_menu.h  settings_dialog.cpp  settings_dialog.h
src/audio/: sound_manager.cpp  sound_manager.h
src/core/: base.cpp  base.h  bullet.cpp  bullet.h  enemy_tank.cpp  enemy_tank.h  game_common.h  game_config.h  game_engine.cpp  game_engine.h  map.cpp  map.h  player_tank.cpp  player_tank.h  powerup.cpp  powerup.h  skill.cpp  skill.h  tank.cpp  tank.h  wall.cpp  wall.h
src/data/: config_manager.cpp  config_manager.h  highscore_manager.cpp  highscore_manager.h  level_loader.cpp  level_loader.h
src/ui/: game_scene.cpp  game_scene.h  game_view.cpp  game_view.h  hud.cpp  hud.h  tank_item.cpp  tank_item.h
src/utils/: factory.cpp  factory.h  resource_manager.cpp  resource_manager.h
tests/: CMakeLists.txt  test_tank.cpp
vcpkg-overlays/qtbase/: portfile.cmake  vcpkg.json
